--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "dependencies": {},
   "devDependencies": {
-  	"grunt": "~0.4.0rc4",
-    "grunt-jam": "~0.3.4",
-    "grunt-contrib-watch": "~0.2.0",
-    "grunt-contrib-jshint": "~0.1.0",
-    "grunt-contrib-compass": "~0.1.0"
+    "grunt": "~0.4.0",
+    "grunt-jam": "~0.4.1",
+    "grunt-contrib-watch": "~0.4.2",
+    "grunt-contrib-jshint": "~0.1.1",
+    "grunt-contrib-compass": "~0.1.2"
   },
   "jam": {
     "main": "webroot/js/main",
     "dependencies": {
-      "jquery": "~1.8.3"
+      "jquery": "~1.9.1"
     }
   }
 }
